--- a/index.html
+++ b/index.html
@@ -147,10 +147,9 @@
 					<section id="proyectos" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image">
-								<a href="" target="_blank"><img class="img" src="images/tmdb.jpg" alt="" /></a></div><div class="content">
-								<h2>TMDB<br /></h2>
-								<p>El proyecto se desarrolló en el plazo de una semana de manera individual. Es una aplicación web que permite buscar películas y ver los detalles de la misma, loguear y desloguear un usuario y añadir favoritos. Se usa la información de la API de The Movie Database(TMDB).
-								Se aplicó las siguientes tecnologías: NodeJS, Express, Sequelize, PostgreSQL, React, Redux.</p>
+								<a href="" target="_blank"><img class="img" src="images/proyectoFreelance.png" alt="" /></a></div><div class="content">
+								<h2>Proyecto freelance<br /></h2>
+								<p>Pagina web realizada desde cero para importante discoteca de Buenos Aires. Con vista para cliente: home, historia, cultura y vista administrador. Se aplicó metodologías ágiles: Scrum y las siguientes tecnologías: NodeJS, Express, Sequelize, PostgreSQL, React, Redux.</p>
 							</div>
 						</section>
 						<section class="spotlight">
