--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 							<li><a href="https://www.linkedin.com/in/melisaburgos/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/MeliBurgos" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=d.melisaburgos@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Mail</span></a></li>
-							<li><a href="https://drive.google.com/file/d/1QcDEAVQSDl5wo2bBvr_V-B32MF345t5E/view?usp=sharing" target="_blank" class="icon solid fa-download"><span class="label">CV</span></a></li>
+							<li><a href="https://drive.google.com/file/d/1wJuD_eT390NJB20akvyNVQXG8PiJrS32/view?usp=share_link" target="_blank" class="icon solid fa-download"><span class="label">CV</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
